--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -37,6 +37,7 @@ dependencies:
       - asttokens==2.4.1
       - async-lru==2.0.4
       - attrs==24.2.0
+      - autocommand==2.2.2
       - babel==2.16.0
       - backports-tarfile==1.2.0
       - beautifulsoup4==4.12.3
@@ -93,7 +94,7 @@ dependencies:
       - fpdf2==2.8.1
       - fqdn==1.5.1
       - frozenlist==1.4.1
-      - fsspec==2023.12.1
+      - fsspec==2024.3.1
       - gitdb==4.0.11
       - gitpython==3.1.43
       - gluonts==0.15.1
@@ -130,7 +131,7 @@ dependencies:
       - idna==3.10
       - ifaddr==0.2.0
       - imageio==2.35.1
-      - importlib-metadata==7.1.0
+      - importlib-metadata==8.1.0
       - importlib-resources==6.4.5
       - imutils==0.5.4
       - inflect==7.4.0
@@ -202,7 +203,7 @@ dependencies:
       - llama-index-multi-modal-llms-openai==0.1.8
       - llama-index-program-openai==0.1.7
       - llama-index-question-gen-openai==0.1.3
-      - llama-index-readers-file==0.1.28
+      - llama-index-readers-file==0.1.32
       - llama-index-readers-llama-parse==0.1.6
       - llama-parse==0.4.9
       - llamaindex-py-client==0.1.19
@@ -304,7 +305,7 @@ dependencies:
       - pytest==8.3.3
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
-      - python-engineio==4.9.1
+      - python-engineio==4.10.0
       - python-json-logger==2.0.7
       - python-multipart==0.0.12
       - python-socketio==5.11.4
@@ -413,7 +414,7 @@ dependencies:
       - wsproto==1.2.0
       - xlsxwriter==3.2.0
       - xxhash==3.5.0
-      - yarl==1.15.1
+      - yarl==1.15.2
       - yoctopuce==2.0.62875
       - zipp==3.20.2
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
