--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -94,7 +94,7 @@ dependencies:
       - fpdf2==2.8.1
       - fqdn==1.5.1
       - frozenlist==1.4.1
-      - fsspec==2024.3.1
+      - fsspec==2024.6.0
       - gitdb==4.0.11
       - gitpython==3.1.43
       - gluonts==0.15.1
@@ -131,7 +131,7 @@ dependencies:
       - idna==3.10
       - ifaddr==0.2.0
       - imageio==2.35.1
-      - importlib-metadata==8.1.0
+      - importlib-metadata==8.3.0
       - importlib-resources==6.4.5
       - imutils==0.5.4
       - inflect==7.4.0
@@ -191,21 +191,21 @@ dependencies:
       - lightning-utilities==0.11.7
       - llama-cloud==0.1.2
       - llama-cpp-python==0.3.1
-      - llama-index==0.10.59
-      - llama-index-agent-openai==0.2.6
-      - llama-index-cli==0.1.13
-      - llama-index-core==0.10.59
-      - llama-index-embeddings-openai==0.1.9
-      - llama-index-indices-managed-llama-cloud==0.2.7
-      - llama-index-legacy==0.9.48
-      - llama-index-llms-ollama==0.1.6
-      - llama-index-llms-openai==0.1.29
-      - llama-index-multi-modal-llms-openai==0.1.8
-      - llama-index-program-openai==0.1.7
-      - llama-index-question-gen-openai==0.1.3
-      - llama-index-readers-file==0.1.32
-      - llama-index-readers-llama-parse==0.1.6
-      - llama-parse==0.4.9
+      - llama-index==0.11.17
+      - llama-index-agent-openai==0.3.4
+      - llama-index-cli==0.3.1
+      - llama-index-core==0.11.17
+      - llama-index-embeddings-openai==0.2.5
+      - llama-index-indices-managed-llama-cloud==0.4.0
+      - llama-index-legacy==0.9.48.post3
+      - llama-index-llms-ollama==0.3.4
+      - llama-index-llms-openai==0.2.13
+      - llama-index-multi-modal-llms-openai==0.2.2
+      - llama-index-program-openai==0.2.0
+      - llama-index-question-gen-openai==0.2.0
+      - llama-index-readers-file==0.2.2
+      - llama-index-readers-llama-parse==0.3.0
+      - llama-parse==0.5.7
       - llamaindex-py-client==0.1.19
       - llvmlite==0.43.0
       - lmdb==1.5.1
