--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -14,90 +14,61 @@ dependencies:
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - pip:
-      - absl-py==2.1.0
-      - aiofiles==24.1.0
       - aiohappyeyeballs==2.4.3
       - aiohttp==3.10.10
-      - aioitertools==0.12.0
       - aiosignal==1.3.1
-      - aiosqlite==0.20.0
-      - albucore==0.0.17
-      - albumentations==1.4.18
-      - alembic==1.13.3
+      - albucore==0.0.19
+      - albumentations==1.4.20
       - altair==5.4.1
       - annotated-types==0.7.0
-      - antlr4-python3-runtime==4.9.3
       - anyio==4.6.1
-      - appdirs==1.4.4
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
-      - arize-phoenix-evals==0.17.0
-      - arrow==1.3.0
       - asttokens==2.4.1
       - async-lru==2.0.4
       - attrs==24.2.0
-      - autocommand==2.2.2
       - babel==2.16.0
-      - backports-tarfile==1.2.0
       - beautifulsoup4==4.12.3
-      - bidict==0.23.1
       - bleach==6.1.0
       - blinker==1.8.2
-      - blis==0.7.11
-      - botocore==1.35.40
       - braincube-connector==2.6.0
       - cachetools==5.5.0
-      - catalogue==2.0.10
       - certifi==2024.8.30
       - cffi==1.17.1
       - charset-normalizer==3.4.0
       - click==8.1.7
-      - cloudpathlib==0.19.0
-      - clr-loader==0.2.6
       - colorama==0.4.6
       - comm==0.2.2
-      - confection==0.1.5
       - contourpy==1.3.0
       - cycler==0.12.1
-      - cymem==2.0.8
       - cython==3.0.11
       - dataclasses-json==0.6.7
-      - datasets==3.0.1
       - db-dtypes==1.3.0
       - debugpy==1.8.7
       - decorator==5.1.1
       - defusedxml==0.7.1
       - deprecated==1.2.14
-      - deprecation==2.1.0
-      - dill==0.3.8
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
       - dnspython==2.7.0
-      - docker-pycreds==0.4.0
       - docstring-parser==0.16
       - docutils==0.21.2
       - durationpy==0.9
-      - einops==0.8.0
       - email-validator==2.2.0
       - eval-type-backport==0.2.0
-      - exceptiongroup==1.2.2
       - executing==2.1.0
-      - fastapi==0.115.2
-      - fastapi-cli==0.0.5
       - fastjsonschema==2.20.0
       - filelock==3.16.1
       - flake8==7.1.1
       - flask==3.0.3
       - fonttools==4.54.1
       - fpdf2==2.8.1
-      - fqdn==1.5.1
-      - frozenlist==1.4.1
-      - fsspec==2024.6.1
+      - frozenlist==1.5.0
+      - fsspec==2024.10.0
       - gitdb==4.0.11
       - gitpython==3.1.43
-      - gluonts==0.15.1
       - google-api-core==2.21.0
       - google-api-python-client==2.135.0
       - google-auth==2.35.0
@@ -108,55 +79,43 @@ dependencies:
       - google-cloud-compute==1.19.2
       - google-cloud-core==2.4.1
       - google-cloud-pipeline-components==2.17.0
-      - google-cloud-resource-manager==1.12.5
-      - google-cloud-secret-manager==2.20.2
+      - google-cloud-resource-manager==1.13.0
+      - google-cloud-secret-manager==2.21.0
       - google-cloud-storage==2.18.2
-      - google-cloud-vision==3.7.4
+      - google-cloud-vision==3.8.0
       - google-crc32c==1.6.0
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.65.0
-      - graphql-core==3.2.5
       - greenlet==3.1.1
       - grpc-google-iam-v1==0.13.1
-      - grpcio==1.66.2
+      - grpcio==1.67.0
       - grpcio-status==1.62.3
       - h11==0.14.0
       - h5py==3.12.1
       - httpcore==1.0.5
       - httplib2==0.22.0
-      - httptools==0.6.2
       - httpx==0.27.2
-      - huggingface-hub==0.25.2
-      - hydra-core==1.3.2
       - idna==3.10
-      - ifaddr==0.2.0
       - imageio==2.36.0
       - importlib-metadata==8.4.0
       - importlib-resources==6.4.5
       - imutils==0.5.4
-      - inflect==7.4.0
       - iniconfig==2.0.0
-      - intel-cmplr-lib-ur==2024.2.1
-      - intel-openmp==2024.2.1
+      - intel-cmplr-lib-ur==2025.0.0
+      - intel-openmp==2025.0.0
       - ipykernel==6.29.5
-      - ipython==8.28.0
+      - ipython==8.29.0
       - ipython-genutils==0.2.0
-      - isoduration==20.11.0
       - itsdangerous==2.2.0
-      - jaraco-context==6.0.1
-      - jaraco-functools==4.1.0
-      - jaraco-text==4.0.0
-      - jax==0.4.34
-      - jaxlib==0.4.34
+      - jax==0.4.35
+      - jaxlib==0.4.35
       - jedi==0.19.1
       - jinja2==3.1.4
       - jiter==0.6.1
-      - jmespath==1.0.1
       - joblib==1.4.2
       - json-numpy==2.1.0
       - json5==0.9.25
       - jsonpatch==1.33
-      - jsonpath-ng==1.7.0
       - jsonpointer==3.0.0
       - jsonschema==4.23.0
       - jsonschema-specifications==2024.10.1
@@ -183,59 +142,51 @@ dependencies:
       - langchain-core==0.1.52
       - langchain-openai==0.1.6
       - langchain-text-splitters==0.0.2
-      - langcodes==3.4.1
       - langsmith==0.1.129
-      - language-data==1.2.0
       - lazy-loader==0.4
       - lightning==2.4.0
-      - lightning-utilities==0.11.7
-      - llama-cloud==0.1.2
+      - lightning-utilities==0.11.8
+      - llama-cloud==0.1.4
       - llama-cpp-python==0.3.1
-      - llama-index==0.11.17
+      - llama-index==0.11.20
       - llama-index-agent-openai==0.3.4
       - llama-index-cli==0.3.1
-      - llama-index-core==0.11.17
+      - llama-index-core==0.11.20
       - llama-index-embeddings-openai==0.2.5
       - llama-index-indices-managed-llama-cloud==0.4.0
       - llama-index-legacy==0.9.48.post3
       - llama-index-llms-ollama==0.3.4
-      - llama-index-llms-openai==0.2.13
-      - llama-index-multi-modal-llms-openai==0.2.2
+      - llama-index-llms-openai==0.2.16
+      - llama-index-multi-modal-llms-openai==0.2.3
       - llama-index-program-openai==0.2.0
       - llama-index-question-gen-openai==0.2.0
       - llama-index-readers-file==0.2.2
       - llama-index-readers-llama-parse==0.3.0
-      - llama-parse==0.5.7
+      - llama-parse==0.5.12
       - llamaindex-py-client==0.1.19
       - llvmlite==0.43.0
       - lmdb==1.5.1
       - lxml==5.3.0
-      - mako==1.3.5
-      - marisa-trie==1.2.1
       - markdown==3.7
       - markdown-it-py==3.0.0
-      - markdown2==2.5.1
-      - markupsafe==3.0.1
-      - marshmallow==3.22.0
+      - markupsafe==3.0.2
+      - marshmallow==3.23.0
       - matplotlib==3.9.2
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
       - mistune==3.0.2
-      - mkl==2024.2.2
+      - mkl==2025.0.0
       - ml-dtypes==0.5.0
-      - more-itertools==10.5.0
       - mpmath==1.3.0
       - multidict==6.1.0
-      - multiprocess==0.70.16
-      - murmurhash==1.0.10
       - mypy-extensions==1.0.0
-      - narwhals==1.9.3
+      - narwhals==1.11.0
       - nbclient==0.10.0
       - nbconvert==7.16.4
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.4.1
+      - networkx==3.4.2
       - nltk==3.9.1
       - notebook==7.2.2
       - notebook-shim==0.2.4
@@ -243,8 +194,7 @@ dependencies:
       - numpy==1.26.4
       - oauthlib==3.2.2
       - ollama==0.3.3
-      - omegaconf==2.3.0
-      - openai==1.51.2
+      - openai==1.52.2
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
@@ -252,7 +202,7 @@ dependencies:
       - openinference-instrumentation-langchain==0.1.28
       - openinference-instrumentation-llama-index==3.0.2
       - openinference-instrumentation-openai==0.1.14
-      - openinference-semantic-conventions==0.1.10
+      - openinference-semantic-conventions==0.1.11
       - opentelemetry-api==1.27.0
       - opentelemetry-exporter-otlp==1.27.0
       - opentelemetry-exporter-otlp-proto-common==1.27.0
@@ -263,158 +213,112 @@ dependencies:
       - opentelemetry-sdk==1.27.0
       - opentelemetry-semantic-conventions==0.48b0
       - opt-einsum==3.4.0
-      - orjson==3.10.7
+      - orjson==3.10.10
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.3
-      - pandas-gbq==0.23.2
+      - pandas-gbq==0.24.0
       - pandocfilters==1.5.1
       - parso==0.8.4
       - persist-queue==1.0.0
       - pillow==10.4.0
-      - pip==24.2
+      - pip==24.3.1
       - platformdirs==4.3.6
       - pluggy==1.5.0
-      - ply==3.11
-      - preshed==3.0.9
       - prometheus-client==0.21.0
       - prompt-toolkit==3.0.48
       - propcache==0.2.0
-      - proto-plus==1.24.0
-      - protobuf==4.25.4
-      - pscript==0.7.7
-      - psutil==6.0.0
+      - proto-plus==1.25.0
+      - protobuf==4.25.5
+      - psutil==6.1.0
       - pure-eval==0.2.3
       - pyarrow==17.0.0
-      - pyarrow-hotfix==0.6
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
       - pycparser==2.22
       - pydantic==2.9.2
       - pydantic-core==2.23.4
-      - pydantic-settings==2.5.2
+      - pydantic-settings==2.6.0
       - pydata-google-auth==1.8.2
       - pydeck==0.9.1
       - pyflakes==3.2.0
       - pygments==2.18.0
+      - pylucidio==2.4
       - pyparsing==3.2.0
       - pypdf==4.3.1
-      - pypng==0.20220715.0
       - pyqtree==1.0.0
+      - pyserial==3.5
       - pytest==8.3.3
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
-      - python-engineio==4.10.0
       - python-json-logger==2.0.7
-      - python-multipart==0.0.12
-      - python-socketio==5.11.4
-      - pythonnet==3.0.4
       - pytorch-lightning==2.4.0
       - pytz==2024.2
       - pywin32==308
-      - pywinpty==2.0.13
+      - pywinpty==2.0.14
       - pyyaml==6.0.2
       - pyzbar==0.1.9
       - pyzmq==26.2.0
       - qrcode==8.0
-      - qudida==0.0.4
       - referencing==0.35.1
       - regex==2024.9.11
-      - replicate==1.0.1
       - requests==2.32.3
       - requests-oauthlib==2.0.0
       - requests-toolbelt==0.10.1
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
-      - rich==13.9.2
+      - rich==13.9.3
       - rpds-py==0.20.0
       - rsa==4.9
-      - ruff==0.6.9
-      - safetensors==0.4.5
+      - ruff==0.7.1
       - scikit-image==0.24.0
-      - scikit-learn==1.5.2
       - scipy==1.14.1
       - segment-anything==1.0
       - send2trash==1.8.3
-      - sentry-sdk==2.16.0
-      - setproctitle==1.3.3
-      - setuptools==75.1.0
+      - setuptools==75.2.0
       - shapely==2.0.6
-      - shellingham==1.5.4
-      - simple-websocket==1.1.0
       - six==1.16.0
-      - smart-open==7.0.5
       - smmap==5.0.1
-      - snakeviz==2.2.0
       - sniffio==1.3.1
       - soupsieve==2.6
-      - spacy==3.8.0
-      - spacy-legacy==3.0.12
-      - spacy-loggers==1.0.5
-      - sqlalchemy==2.0.35
-      - sqlean-py==3.45.1
-      - srsly==2.4.8
+      - sqlalchemy==2.0.36
       - stack-data==0.6.3
-      - starlette==0.39.2
-      - strawberry-graphql==0.246.2
       - streamlit==1.39.0
+      - stringzilla==3.10.5
       - striprtf==0.0.26
       - sympy==1.13.3
       - tabulate==0.9.0
-      - tbb==2021.12.0
+      - tbb==2022.0.0
+      - tcmlib==1.2.0
       - tenacity==8.5.0
-      - tensorboard==2.18.0
-      - tensorboard-data-server==0.7.2
       - terminado==0.18.1
-      - thinc==8.2.5
-      - threadpoolctl==3.5.0
       - tifffile==2024.9.20
       - tiktoken==0.8.0
-      - tinycss2==1.3.0
-      - toga-core==0.4.7
+      - tinycss2==1.4.0
       - toml==0.10.2
-      - tomli==2.0.2
-      - toolz==0.12.1
       - torch==2.4.1+cu124
       - torchaudio==2.4.1+cu124
-      - torchmetrics==1.4.3
+      - torchmetrics==1.5.1
       - torchvision==0.19.1+cu124
       - tornado==6.4.1
       - tqdm==4.66.5
       - traitlets==5.14.3
-      - travertino==0.3.0
-      - typeguard==4.3.0
-      - typer==0.12.5
-      - types-python-dateutil==2.9.0.20241003
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
       - tzdata==2024.2
-      - tzlocal==5.2
-      - ujson==5.10.0
-      - uri-template==1.3.0
+      - umf==0.9.0
       - uritemplate==4.1.1
       - urllib3==1.26.19
-      - uvicorn==0.31.1
-      - validators==0.34.0
-      - vbuild==0.8.2
-      - wandb==0.18.3
-      - wasabi==1.1.3
       - watchdog==5.0.3
-      - watchfiles==0.24.0
       - wcwidth==0.2.13
-      - weasel==0.4.1
-      - webcolors==24.8.0
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - websockets==13.1
-      - werkzeug==3.0.4
+      - werkzeug==3.0.6
       - wheel==0.44.0
       - wrapt==1.16.0
-      - wsproto==1.2.0
       - xlsxwriter==3.2.0
-      - xxhash==3.5.0
-      - yarl==1.15.2
+      - yarl==1.16.0
       - yoctopuce==2.0.62875
       - zipp==3.20.2
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
