--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -38,6 +38,7 @@ dependencies:
       - cffi==1.17.1
       - charset-normalizer==3.4.0
       - click==8.1.7
+      - click-default-group==1.2.4
       - colorama==0.4.6
       - comm==0.2.2
       - contourpy==1.3.0
@@ -164,6 +165,7 @@ dependencies:
       - llama-index-readers-llama-parse==0.3.0
       - llama-parse==0.5.12
       - llamaindex-py-client==0.1.19
+      - llm==0.17
       - llvmlite==0.43.0
       - lmdb==1.5.1
       - lxml==5.3.0
@@ -232,6 +234,7 @@ dependencies:
       - protobuf==4.25.5
       - psutil==6.1.0
       - pure-eval==0.2.3
+      - puremagic==1.28
       - pyarrow==17.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
@@ -248,11 +251,13 @@ dependencies:
       - pyparsing==3.2.0
       - pypdf==4.3.1
       - pyqtree==1.0.0
+      - pyreadline3==3.5.4
       - pyserial==3.5
       - pytest==8.3.3
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
       - python-json-logger==2.0.7
+      - python-ulid==3.0.0
       - pytorch-lightning==2.4.0
       - pytz==2024.2
       - pywin32==308
@@ -283,6 +288,9 @@ dependencies:
       - sniffio==1.3.1
       - soupsieve==2.6
       - sqlalchemy==2.0.36
+      - sqlite-fts4==1.0.3
+      - sqlite-migrate==0.1b0
+      - sqlite-utils==3.37
       - stack-data==0.6.3
       - streamlit==1.39.0
       - stringzilla==3.10.5
