--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -21,6 +21,7 @@ dependencies:
       - albumentations==1.4.20
       - altair==5.4.1
       - annotated-types==0.7.0
+      - anthropic==0.37.1
       - anyio==4.6.1
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
@@ -96,6 +97,7 @@ dependencies:
       - httpcore==1.0.5
       - httplib2==0.22.0
       - httpx==0.27.2
+      - huggingface-hub==0.26.2
       - idna==3.10
       - imageio==2.36.0
       - importlib-metadata==8.4.0
@@ -166,6 +168,7 @@ dependencies:
       - llama-parse==0.5.12
       - llamaindex-py-client==0.1.19
       - llm==0.17
+      - llm-claude-3==0.6
       - llvmlite==0.43.0
       - lmdb==1.5.1
       - lxml==5.3.0
@@ -304,6 +307,7 @@ dependencies:
       - tifffile==2024.9.20
       - tiktoken==0.8.0
       - tinycss2==1.4.0
+      - tokenizers==0.20.1
       - toml==0.10.2
       - torch==2.4.1+cu124
       - torchaudio==2.4.1+cu124
