--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -14,30 +14,30 @@ dependencies:
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - pip:
-      - aiohappyeyeballs==2.4.3
-      - aiohttp==3.11.8
-      - aiosignal==1.3.1
+      - aiohappyeyeballs==2.4.4
+      - aiohttp==3.11.11
+      - aiosignal==1.3.2
       - aisuite==0.1.6
-      - albucore==0.0.20
-      - albumentations==1.4.21
+      - albucore==0.0.21
+      - albumentations==1.4.23
       - altair==5.5.0
       - annotated-types==0.7.0
-      - anthropic==0.40.0
-      - anyio==4.6.1
+      - anthropic==0.42.0
+      - anyio==4.7.0
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
-      - asttokens==2.4.1
+      - asttokens==3.0.0
       - async-lru==2.0.4
-      - attrs==24.2.0
+      - attrs==24.3.0
       - babel==2.16.0
       - beautifulsoup4==4.12.3
       - bleach==6.2.0
       - blinker==1.9.0
       - braincube-connector==2.6.0
       - cachetools==5.5.0
-      - certifi==2024.8.30
+      - certifi==2024.12.14
       - cffi==1.17.1
       - charset-normalizer==3.4.0
       - click==8.1.7
@@ -49,7 +49,7 @@ dependencies:
       - cython==3.0.11
       - dataclasses-json==0.6.7
       - db-dtypes==1.3.1
-      - debugpy==1.8.9
+      - debugpy==1.8.11
       - decorator==5.1.1
       - defusedxml==0.7.1
       - deprecated==1.2.15
@@ -63,38 +63,41 @@ dependencies:
       - email-validator==2.2.0
       - eval-type-backport==0.2.0
       - executing==2.1.0
-      - fastjsonschema==2.21.0
+      - fastjsonschema==2.21.1
       - filelock==3.16.1
       - filetype==1.2.0
       - flake8==7.1.1
       - flask==3.1.0
-      - fonttools==4.55.0
-      - fpdf2==2.8.1
+      - fonttools==4.55.3
+      - fpdf2==2.8.2
       - fqdn==1.5.1
       - frozenlist==1.5.0
-      - fsspec==2024.10.0
+      - fsspec==2024.12.0
       - gitdb==4.0.11
       - gitpython==3.1.43
-      - google-api-core==2.23.0
+      - google-ai-generativelanguage==0.6.10
+      - google-api-core==2.24.0
       - google-api-python-client==2.135.0
-      - google-auth==2.36.0
+      - google-auth==2.37.0
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.1
-      - google-cloud-aiplatform==1.73.0
+      - google-cloud-aiplatform==1.75.0
       - google-cloud-bigquery==3.27.0
-      - google-cloud-compute==1.22.0
+      - google-cloud-compute==1.23.0
       - google-cloud-core==2.4.1
-      - google-cloud-pipeline-components==2.17.0
-      - google-cloud-resource-manager==1.13.1
-      - google-cloud-secret-manager==2.21.1
-      - google-cloud-storage==2.18.2
-      - google-cloud-vision==3.8.1
+      - google-cloud-pipeline-components==2.18.0
+      - google-cloud-resource-manager==1.14.0
+      - google-cloud-secret-manager==2.22.0
+      - google-cloud-storage==2.19.0
+      - google-cloud-vision==3.9.0
       - google-crc32c==1.6.0
+      - google-genai==0.3.0
+      - google-generativeai==0.8.3
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.66.0
       - greenlet==3.1.1
       - grpc-google-iam-v1==0.13.1
-      - grpcio==1.68.0
+      - grpcio==1.68.1
       - grpcio-status==1.62.3
       - h11==0.14.0
       - h5py==3.12.1
@@ -102,25 +105,27 @@ dependencies:
       - httplib2==0.22.0
       - httpx==0.27.2
       - httpx-sse==0.4.0
-      - huggingface-hub==0.26.3
+      - huggingface-hub==0.27.0
       - idna==3.10
+      - ijson==3.3.0
       - imageio==2.36.1
       - importlib-metadata==8.4.0
       - importlib-resources==6.4.5
       - imutils==0.5.4
       - iniconfig==2.0.0
-      - intel-cmplr-lib-ur==2025.0.2
-      - intel-openmp==2025.0.2
+      - intel-cmplr-lib-ur==2025.0.4
+      - intel-openmp==2025.0.4
+      - iprogress==0.4
       - ipykernel==6.29.5
-      - ipython==8.29.0
+      - ipython==8.31.0
       - ipython-genutils==0.2.0
       - isoduration==20.11.0
       - itsdangerous==2.2.0
-      - jax==0.4.35
-      - jaxlib==0.4.35
+      - jax==0.4.38
+      - jaxlib==0.4.38
       - jedi==0.19.2
       - jinja2==3.1.4
-      - jiter==0.8.0
+      - jiter==0.8.2
       - joblib==1.4.2
       - json-numpy==2.1.0
       - json5==0.10.0
@@ -132,13 +137,13 @@ dependencies:
       - jupyter-contrib-core==0.4.2
       - jupyter-contrib-nbextensions==0.7.0
       - jupyter-core==5.7.2
-      - jupyter-events==0.10.0
+      - jupyter-events==0.11.0
       - jupyter-highlight-selected-word==0.2.0
       - jupyter-lsp==2.2.5
       - jupyter-nbextensions-configurator==0.6.4
-      - jupyter-server==2.14.2
+      - jupyter-server==2.15.0
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.2.6
+      - jupyterlab==4.3.4
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.3
       - kfp==2.7.0
@@ -155,7 +160,7 @@ dependencies:
       - lazy-loader==0.4
       - lightning==2.4.0
       - lightning-utilities==0.11.9
-      - llama-cloud==0.1.5
+      - llama-cloud==0.1.6
       - llama-cpp-python==0.3.2
       - llama-index==0.11.23
       - llama-index-agent-openai==0.3.4
@@ -171,18 +176,19 @@ dependencies:
       - llama-index-question-gen-openai==0.2.0
       - llama-index-readers-file==0.3.0
       - llama-index-readers-llama-parse==0.3.0
-      - llama-parse==0.5.15
+      - llama-parse==0.5.18
       - llamaindex-py-client==0.1.19
-      - llm==0.18
-      - llm-claude-3==0.9
+      - llm==0.19.1
+      - llm-claude-3==0.10
+      - llm-gemini==0.8
       - llvmlite==0.43.0
       - lmdb==1.5.1
       - lxml==5.3.0
       - markdown==3.7
       - markdown-it-py==3.0.0
       - markupsafe==3.0.2
-      - marshmallow==3.23.1
-      - matplotlib==3.9.2
+      - marshmallow==3.23.2
+      - matplotlib==3.10.0
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
@@ -192,26 +198,27 @@ dependencies:
       - mpmath==1.3.0
       - multidict==6.1.0
       - mypy-extensions==1.0.0
-      - narwhals==1.14.3
-      - nbclient==0.10.0
+      - narwhals==1.19.0
+      - nbclient==0.10.2
       - nbconvert==7.16.4
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
       - networkx==3.4.2
       - nltk==3.9.1
-      - notebook==7.2.2
+      - nodeenv==1.9.1
+      - notebook==7.3.1
       - notebook-shim==0.2.4
       - numba==0.60.0
       - numpy==1.26.4
       - oauthlib==3.2.2
-      - ollama==0.4.1
-      - openai==1.55.3
+      - ollama==0.4.4
+      - openai==1.58.1
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
-      - openinference-instrumentation==0.1.18
+      - openinference-instrumentation==0.1.20
       - openinference-instrumentation-langchain==0.1.29
-      - openinference-instrumentation-llama-index==3.0.4
+      - openinference-instrumentation-llama-index==3.1.1
       - openinference-instrumentation-openai==0.1.18
       - openinference-semantic-conventions==0.1.12
       - opentelemetry-api==1.27.0
@@ -228,21 +235,22 @@ dependencies:
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.3
-      - pandas-gbq==0.24.0
+      - pandas-gbq==0.26.0
       - pandocfilters==1.5.1
       - parso==0.8.4
       - persist-queue==1.0.0
       - pillow==11.0.0
       - pip==24.3.1
+      - pipdeptree==2.23.1
       - platformdirs==4.3.6
       - pluggy==1.5.0
       - plyfile==1.1
-      - prometheus-client==0.21.0
+      - prometheus-client==0.21.1
       - prompt-toolkit==3.0.48
-      - propcache==0.2.0
+      - propcache==0.2.1
       - proto-plus==1.25.0
       - protobuf==4.25.5
-      - psutil==6.1.0
+      - psutil==6.1.1
       - pure-eval==0.2.3
       - puremagic==1.28
       - pyarrow==18.1.0
@@ -250,9 +258,9 @@ dependencies:
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
       - pycparser==2.22
-      - pydantic==2.10.2
-      - pydantic-core==2.27.1
-      - pydantic-settings==2.6.1
+      - pydantic==2.10.4
+      - pydantic-core==2.27.2
+      - pydantic-settings==2.7.0
       - pydata-google-auth==1.9.0
       - pydeck==0.9.1
       - pyflakes==3.2.0
@@ -262,11 +270,12 @@ dependencies:
       - pypdf==5.1.0
       - pyqtree==1.0.0
       - pyreadline3==3.5.4
+      - pyright==1.1.391
       - pyserial==3.5
-      - pytest==8.3.3
+      - pytest==8.3.4
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
-      - python-json-logger==2.0.7
+      - python-json-logger==3.2.1
       - python-ulid==3.0.0
       - pytorch-lightning==2.4.0
       - pytz==2024.2
@@ -284,17 +293,17 @@ dependencies:
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rich==13.9.4
-      - rpds-py==0.21.0
+      - rpds-py==0.22.3
       - rsa==4.9
-      - ruff==0.8.0
-      - scikit-image==0.24.0
+      - ruff==0.8.4
+      - scikit-image==0.25.0
       - scipy==1.14.1
       - segment-anything==1.0
       - send2trash==1.8.3
       - setuptools==75.6.0
       - shapely==2.0.6
       - simsimd==6.2.1
-      - six==1.16.0
+      - six==1.17.0
       - smmap==5.0.1
       - snakeviz==2.2.2
       - sniffio==1.3.1
@@ -304,8 +313,8 @@ dependencies:
       - sqlite-migrate==0.1b0
       - sqlite-utils==3.38
       - stack-data==0.6.3
-      - streamlit==1.40.2
-      - stringzilla==3.10.10
+      - streamlit==1.41.1
+      - stringzilla==3.11.2
       - striprtf==0.0.26
       - sympy==1.13.3
       - tabulate==0.9.0
@@ -313,7 +322,7 @@ dependencies:
       - tcmlib==1.2.0
       - tenacity==8.5.0
       - terminado==0.18.1
-      - tifffile==2024.9.20
+      - tifffile==2024.12.12
       - tiktoken==0.8.0
       - tinycss2==1.4.0
       - tokenizers==0.21.0
@@ -325,7 +334,7 @@ dependencies:
       - tornado==6.4.2
       - tqdm==4.67.1
       - traitlets==5.14.3
-      - types-python-dateutil==2.9.0.20241003
+      - types-python-dateutil==2.9.0.20241206
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
       - tzdata==2024.2
@@ -338,11 +347,12 @@ dependencies:
       - webcolors==24.11.1
       - webencodings==0.5.1
       - websocket-client==1.8.0
+      - websockets==14.1
       - werkzeug==3.1.3
       - wheel==0.45.1
       - wrapt==1.17.0
       - xlsxwriter==3.2.0
-      - yarl==1.18.0
-      - yoctopuce==2.0.62875
+      - yarl==1.18.3
+      - yoctopuce==2.0.63620
       - zipp==3.21.0
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
