--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -61,7 +61,7 @@ dependencies:
       - cython==3.0.11
       - dataclasses-json==0.6.7
       - db-dtypes==1.3.1
-      - debugpy==1.8.11
+      - debugpy==1.8.12
       - decorator==5.1.1
       - defusedxml==0.7.1
       - deprecated==1.2.15
@@ -112,7 +112,7 @@ dependencies:
       - googleapis-common-protos==1.66.0
       - greenlet==3.1.1
       - grpc-google-iam-v1==0.13.1
-      - grpcio==1.68.1
+      - grpcio==1.69.0
       - grpcio-status==1.62.3
       - h11==0.14.0
       - h5py==3.12.1
@@ -127,7 +127,7 @@ dependencies:
       - ijson==3.3.0
       - imageio==2.36.1
       - importlib-metadata==8.4.0
-      - importlib-resources==6.4.5
+      - importlib-resources==6.5.1
       - imutils==0.5.4
       - iniconfig==2.0.0
       - intel-cmplr-lib-ur==2025.0.4
@@ -200,8 +200,8 @@ dependencies:
       - llm==0.19.1
       - llm-claude-3==0.10
       - llm-gemini==0.8
-      - llvmlite==0.43.0
-      - lmdb==1.5.1
+      - llvmlite==0.44.0
+      - lmdb==1.6.2
       - lxml==5.3.0
       - markdown==3.7
       - markdown-it-py==3.0.0
@@ -217,6 +217,7 @@ dependencies:
       - ml-dtypes==0.5.0
       - mmh3==5.0.1
       - monotonic==1.6
+      - more-itertools==10.3.0
       - mpmath==1.3.0
       - msal==1.31.1
       - msal-extensions==1.2.0
@@ -363,7 +364,7 @@ dependencies:
       - terminado==0.18.1
       - threadpoolctl==3.5.0
       - tifffile==2024.12.12
-      - tiktoken==0.8.0
+      - tiktoken==0.7.0
       - tinycss2==1.4.0
       - tokenizers==0.21.0
       - toml==0.10.2
